hard-gists/4017989/run.log
=== Docker Run Log for 4017989 ===
Started at: Mi 29. Okt 14:17:28 CET 2025

[2025-10-29 14:17:29] START: Running container for 4017989
[2025-10-29 14:17:29] SUCCESS: Container 99d09b8ee8d89c24f9ae097d17e54a0b3a69ba10407ce4298c62b01d24fa34a8 started for 4017989
=== Container logs for 4017989 ===
  File "/snippet.py", line 19
    raise BadSeriesError, "Series names and series data have different lengths"
                        ^
SyntaxError: invalid syntax
=== End of logs for 4017989 ===
[2025-10-29 14:17:31] INFO: Container 99d09b8ee8d89c24f9ae097d17e54a0b3a69ba10407ce4298c62b01d24fa34a8 has stopped
